OPENNLP-1446 Investigate why LeskEvaluatorTest and MFSEvaluatorTest fail while parsing 'EnglishLS.train' - makes WSD evaluator tests run again - renames existing other WSD tests from "Tester" to "Test" pattern - restores resources as required originally by the WSD tests - adds semcor3.0 files required for WSD (eval) tests - fixes minor issues with tests in other modules, see OPENNLP-1532 - updates extjwnl dependency to 2.0.5 (was 1.8.1) - resolves OPENNLP-1446